# fastapi-kafka

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: publish.yml
fastapi_kafka/: __init__.py  consumer.py  schema.py
scripts/: formatter.sh
tests/: conftest.py  main.py  test_init.py
