[project]
name = "fastapi_kafka"
dynamic = ["version"]
description = "A wrapper around FastAPI to easily consume kafka messages as routes"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Matt Nick", email = "me@mattnick.xyz" },
]
dependencies = [
    "fastapi>=0.95.0",
    "aiokafka>=0.8.0",
]

[tools.setuptools.packages.find]
where = "fastapi_kafka/"
include = ["fastapi_kafka"]
namespaces = true

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"