[project]
name = "fastapi_kafka"
version = "0.1.1"
description = "A wrapper around FastAPI to easily consume kafka messages as routes"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "OSS Mafia", email = "dev@oss-mafia.com" },
]
dependencies = [
    "fastapi>=0.95.0",
    "aiokafka>=0.8.0",
]

[tools.setuptools.packages.find]
where = "fastapi_kafka/"
include = ["fastapi_kafka"]
namespaces = true

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"